--- a/style.css
+++ b/style.css
@@ -12,12 +12,15 @@
     padding: 0;
     font-family: 'Rubik', sans-serif;
     color: var(--white);
-    
+    overflow-x: hidden;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    overflow-x: visible;
 }
 
 body {
     color: var(--white);
-    overflow-x: hidden;
     background: var(--darkBlueColor)
 }
 
